Added upload to artifacts

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,3 +28,8 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: pwsh script.ps1
+      - name: Upload extended logs
+        uses: actions/upload-artifact@v3
+        with:
+          name: extended-logs
+          path: ./extended_logs.txt
