--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,7 +19,8 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    env:
+      Missing_users: "extended_logs.txt"
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -32,4 +33,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: extended-logs
-          path: ./extended_logs.txt
+          path: ${{ env.Missing_users }}
